# Orderly

./: .dockerignore  .env.cloudrun.example  .env.docker.example  .env.example  .env.local.example  .eslintignore  .eslintrc-security.js  .eslintrc.json  .gcloudignore  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  API-DATA-INCOMPLETENESS-ROOT-CAUSE-ANALYSIS.md  CICD-init-guide.md  CLAUDE.md  DEPLOYMENT-FIX-SUMMARY.md  DEPLOYMENT_SECRETS_CHECKLIST.md  Dockerfile.frontend  Dockerfile.frontend.cloudrun  Makefile  Orderly Design System.md  PERMANENT-SOLUTIONS-IMPLEMENTATION.md  PLAN-COMPLETION-SUMMARY.md  README.md  SKU_FIXES_COMPLETION_REPORT.md  SKU_IMPLEMENTATION_REPORT.md  ULTRA-DEEP-ANALYSIS-FINAL-SUMMARY.md  cleanup-validate.sh  cloudbuild-frontend.yaml  compose.base.yml  compose.dev.yml  compose.monolith.yml  compose.prod.yml  compose.services.yml  compose.staging.yml  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.production.yml  docker-compose.staging.yml  (+20 more)
.claude/: plan-gate-pass.json  restart.yaml  settings.json
.githooks/: pre-commit
.husky/: pre-push
.storybook/: main.ts  preview.ts
app/: globals.css  layout.tsx  page.tsx
backend/libs/: pyproject.toml
backend/libs/orderly_fastapi_core/: __init__.py  app_factory.py  database.py  errors.py  health.py  schemas.py  unified_config.py
backend/libs/orderly_fastapi_core/crud/: __init__.py  base.py
backend/libs/orderly_fastapi_core/middleware/: __init__.py  auth.py  rate_limit.py  security_headers.py
backend/libs/orderly_fastapi_core/models/: __init__.py  base.py
(+1676 files in other folders)
